@@ -288,6 +288,20 @@ name|lucene
 operator|.
 name|util
 operator|.
+name|Bits
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|lucene
+operator|.
+name|util
+operator|.
 name|LuceneTestCase
 import|;
 end_import
@@ -6606,6 +6620,213 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
+DECL|method|testTryDeleteDocument
+specifier|public
+name|void
+name|testTryDeleteDocument
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|Directory
+name|d
+init|=
+name|newDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriterConfig
+name|iwc
+init|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|IndexWriter
+name|w
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+name|iwc
+argument_list|)
+decl_stmt|;
+name|Document
+name|doc
+init|=
+operator|new
+name|Document
+argument_list|()
+decl_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|addDocument
+argument_list|(
+name|doc
+argument_list|)
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|iwc
+operator|=
+operator|new
+name|IndexWriterConfig
+argument_list|(
+name|TEST_VERSION_CURRENT
+argument_list|,
+operator|new
+name|MockAnalyzer
+argument_list|(
+name|random
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|iwc
+operator|.
+name|setOpenMode
+argument_list|(
+name|IndexWriterConfig
+operator|.
+name|OpenMode
+operator|.
+name|APPEND
+argument_list|)
+expr_stmt|;
+name|w
+operator|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|d
+argument_list|,
+name|iwc
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|w
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertTrue
+argument_list|(
+name|w
+operator|.
+name|tryDeleteDocument
+argument_list|(
+name|r
+argument_list|,
+literal|1
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|w
+operator|.
+name|tryDeleteDocument
+argument_list|(
+name|r
+operator|.
+name|leaves
+argument_list|()
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|reader
+argument_list|()
+argument_list|,
+literal|0
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|w
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|r
+operator|=
+name|DirectoryReader
+operator|.
+name|open
+argument_list|(
+name|d
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|r
+operator|.
+name|numDeletedDocs
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|MultiFields
+operator|.
+name|getLiveDocs
+argument_list|(
+name|r
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|d
 operator|.
 name|close
 argument_list|()
